--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,32 @@
 version: '3.7'
 
 services:
+  bitcoin: 
+    image: "doichain/bitcoind:v0.20.0"
+    #build: ./dapp
+    ports:
+      - "8332:8333"
+    volumes:
+     - data-volume:/home/bitcoin/
+    environment:
+      - RPC_PASSWORD=password
+      - RPC_ALLOW_IP=0.0.0.0/0 #::/0
+    stdin_open: true
+    tty: true
+    networks:
+      static-network:
+        ipv4_address: 172.20.0.5
+
   doichain:
     image: "doichain/node-only:dc0.20.1.11_1" 
     hostname: doichain
     ports:
       - "8339:8339"
+    volumes:
+     - data-volume:/home/doichain/
     environment:
       - RPC_PASSWORD=password
       - RPC_ALLOW_IP=0.0.0.0/0 #::/0
-    #  - REGTEST=true
-    #  - CONNECTION_NODE=altbob 
-#    dns_search: ci-doichain.org
-#    volumes:
-#      - ../scripts/docker-compose/resolv.conf:/etc/resolv.conf
     stdin_open: true
     tty: true
     networks:
@@ -23,9 +36,11 @@ services:
   dapp:
     hostname: dapp
     image: doichain/dapp
-    build: .
+    build: ./dapp
     ports:
       - "3000:3000"
+    volumes:
+      - data-volume/:/home/doichain/ 
     environment:
       - DOICHAIN_DAPP_VER=v0.0.9.114
       - MONGO_URL="mongodb://mongo:27017"
@@ -40,23 +55,35 @@ services:
       - DAPP_SMTP_PASS=doichain
       - DAPP_SMTP_PORT=587
       - DAPP_SMTP_DEFAULT_FROM=validator@doichain.org
-    # stdin_open: true
-    # tty: true
     networks:
       static-network:
         ipv4_address: 172.20.0.7
+  p2pool:
+    image: "doichain/p2pool:v34.0"
+    stdin_open: true
+    tty: true
+    volumes:
+      - data-volume:/home/doichain/ 
+    networks:
+      static-network:
+        ipv4_address: 172.20.0.8
 
-  regtest-mongo:
-      image: "mongo:3.2"
-      hostname: mongo
-      expose:
-        - "27017"
-      ports:
-        - "28017:27017"
-      networks:
-        static-network:
-          ipv4_address: 172.20.0.8
-  
+  # regtest-mongo:
+  #     image: "mongo:3.2"
+  #     hostname: mongo
+  #     expose:
+  #       - "27017"
+  #     ports:
+  #       - "28017:27017"
+  #     volumes: 
+  #       - data-volume:/home/doichain/ 
+  #     networks:
+  #       static-network:
+  #         ipv4_address: 172.20.0.8
+
+volumes:
+  data-volume:
+
 networks:
   static-network:
     driver: bridge
