--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,12 @@ version: '3.7'
 services:
   bitcoin: 
     image: "doichain/bitcoind:v0.20.0"
+    container_name: bitcoin
+    hostname: bitcoin
     #build: ./dapp
     ports:
-      - "8332:8333"
+      - "8332:8332"
+      - "8333:8333"
     volumes:
      - data-volume:/home/bitcoin/data
     environment:
@@ -19,6 +22,7 @@ services:
 
   doichain:
     image: "doichain/node-only:dc0.20.1.11_1" 
+    container_name: doichain
     hostname: doichain
     ports:
       - "8339:8339"
@@ -54,18 +58,26 @@ services:
 #     - DAPP_SMTP_PASS=doichain
 #     - DAPP_SMTP_PORT=587
 #     - DAPP_SMTP_DEFAULT_FROM=validator@doichain.org
-#   networks:
+#   networ:wqks:
 #     static-network:
 #       ipv4_address: 172.20.0.7
-# p2pool:
-#   image: "doichain/p2pool:v34.0"
-#   stdin_open: true
-#   tty: true
-#   volumes:
-#     - data-volume:/home/doichain/ 
-#   networks:
-#     static-network:
-#       ipv4_address: 172.20.0.8
+
+  p2pool:
+    image: "doichain/p2pool:v34.0"
+    container_name: p2pool 
+    hostname: p2pool
+    stdin_open: true
+    tty: true
+    volumes:
+      - data-volume:/data
+    environment:
+      - MERGED_MINGIN_URL=http://doichain:8339/
+      - P2POOL_DOICHAIN_DEFAULT_ADDR=bla
+      - P2POOL_BITCOIN_DEFAULT_ADDR=bla
+    
+    networks:
+      static-network:
+        ipv4_address: 172.20.0.8
 
   # regtest-mongo:
   #     image: "mongo:3.2"
