--- a/p2pool/dockerfile
+++ b/p2pool/dockerfile
@@ -15,7 +15,7 @@ RUN adduser --disabled-password --gecos '' p2pool && \
     apt update -qq && apt install -qq -y --no-install-recommends \
     bash jq vim git wget curl jq ca-certificates python3-pip \
     pypy pypy-dev pypy-setuptools gcc build-essential python-zope.interface && \ 
-    pip3 install twisted && cd /home/p2pool && \ 
+    pip3 install twisted sudo && cd /usr/src/ && mkdir -p /data/bitcoin && ln -s /data/bitcoin /home/p2pool/.bitcoin && \ 
     git clone https://github.com/Doichain/p2pool.git && chown -R p2pool p2pool && cd p2pool && \
     wget https://bootstrap.pypa.io/ez_setup.py -O - | pypy && rm setuptools-*.zip && \
     wget https://pypi.python.org/packages/source/z/zope.interface/zope.interface-4.1.3.tar.gz#md5=9ae3d24c0c7415deb249dd1a132f0f79 && tar zxf zope.interface-4.1.3.tar.gz && cd zope.interface-4.1.3/ && \
@@ -23,5 +23,7 @@ RUN adduser --disabled-password --gecos '' p2pool && \
     wget https://pypi.python.org/packages/source/T/Twisted/Twisted-15.4.0.tar.bz2 && tar jxf Twisted-15.4.0.tar.bz2 && cd Twisted-15.4.0 && pypy setup.py install && cd .. && rm -r Twisted-15.4.0* 
 
 USER p2pool 
-CMD [ "/usr/bin/pypy /home/p2pool/p2pool/run_p2pool.py --net bitcoin --merged_addr ${MERGED_MINGIN_URL}/?payout=${P2POOL_DOICHAIN_DEFAULT_ADDR} -a $P2POOL_BITCOIN_DEFAULT_ADDR -n p2pool.org --give-author=0"]
-#python-twisted python-twisted-web
+#RUN ls -l /data && ls -l /home/bitcoin
+#CMD ["ls -l "]
+#CMD [ "/usr/bin/pypy /usr/src/p2pool/run_p2pool.py --net bitcoin"]
+#CMD [ "/usr/bin/pypy /home/p2pool/p2pool/run_p2pool.py --net bitcoin --merged_addr ${MERGED_MINGIN_URL}/?payout=${P2POOL_DOICHAIN_DEFAULT_ADDR} -a $P2POOL_BITCOIN_DEFAULT_ADDR -n p2pool.org --give-author=0"]
