now using two different volumes for bitcoin and doichain blockchain

--- a/bitcoin/dockerfile
+++ b/bitcoin/dockerfile
@@ -62,13 +62,9 @@ RUN adduser --disabled-password --gecos '' bitcoin && \
 USER bitcoin
 #Install BITCOIN-core
 WORKDIR /home/bitcoin
-RUN mkdir .bitcoin && \
-	#sudo git clone --branch ${BITCOIN_VER} --depth 1 https://github.com/BITCOIN/core.git bitcoin-core && \
-	sudo git clone --branch ${BITCOIN_VER} --depth 1 https://github.com/bitcoin/bitcoin.git bitcoin-core && \
-	cd bitcoin-core && \
+RUN 	sudo git clone --branch ${BITCOIN_VER} --depth 1 https://github.com/bitcoin/bitcoin.git bitcoin-core && cd bitcoin-core && \
 	sudo ./contrib/install_db4.sh `pwd` && \
 	sudo ./autogen.sh && \
-	# sudo ./configure --without-gui --disable-wallet  --disable-tests  --disable-gui-tests CXXFLAGS="--param ggc-min-expand=1 --param ggc-min-heapsize=32768" && \
 	sudo ./configure --without-gui  --disable-tests  --disable-gui-tests BDB_LIBS="-L${BDB_PREFIX}/lib -ldb_cxx-4.8" BDB_CFLAGS="-I${BDB_PREFIX}/include" CXXFLAGS="--param ggc-min-expand=1 --param ggc-min-heapsize=32768" && \
 	sudo make && \
 	sudo make install
@@ -95,8 +91,10 @@ WORKDIR /home/bitcoin
 RUN mkdir data && \
 	cd data && \
 	mkdir bitcoin && \
-	chown -R bitcoin /home/bitcoin/data && \
-	sudo rm -rf /home/bitcoin/.bitcoin && \
+	sudo chown -R bitcoin /home/bitcoin && \
+	ls -l /home/bitcoin && \
+	ls -l /home/bitcoin/data && \
+#	sudo rm -rf /home/bitcoin/.bitcoin && \
 	sudo ln -s /home/bitcoin/data/bitcoin /home/bitcoin/.bitcoin
 
 #Run entrypoint
