--- a/p2pool/dockerfile
+++ b/p2pool/dockerfile
@@ -15,7 +15,7 @@ RUN adduser --disabled-password --gecos '' p2pool && \
     apt update -qq && apt install -qq -y --no-install-recommends \
     bash jq vim git wget curl jq ca-certificates python3-pip \
     pypy pypy-dev pypy-setuptools gcc build-essential python-zope.interface && \ 
-    pip3 install twisted sudo && cd /usr/src/ && mkdir -p /data/bitcoin && ln -s /data/bitcoin /home/p2pool/.bitcoin && \ 
+    pip3 install twisted sudo && cd /usr/src/ && mkdir -p /data/bitcoin && ln -s /data/bitcoin/bitcoin /home/p2pool/.bitcoin && \ 
     git clone https://github.com/Doichain/p2pool.git && chown -R p2pool * && cd p2pool && \
     wget https://bootstrap.pypa.io/ez_setup.py -O - | pypy && rm setuptools-*.zip && \
     wget https://pypi.python.org/packages/source/z/zope.interface/zope.interface-4.1.3.tar.gz#md5=9ae3d24c0c7415deb249dd1a132f0f79 && tar zxf zope.interface-4.1.3.tar.gz && cd zope.interface-4.1.3/ && \
