added doichain testnet and made dApp start

--- a/dapp/dockerfile
+++ b/dapp/dockerfile
@@ -40,7 +40,7 @@ RUN adduser --disabled-password --gecos '' doichain && \
 	adduser doichain sudo && \
 	echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers && \ 
   apt update -qq && apt install -qq -y --no-install-recommends \
-  bash git curl jq ca-certificates \ 
+  bash sudo git curl jq ca-certificates \ 
   && (curl https://install.meteor.com/  | sh) \
   && cd /home/doichain  \ 
   && git clone --branch ${DOICHAIN_DAPP_VER} https://github.com/Doichain/dapp.git && chown -R doichain dapp && cd dapp
@@ -49,9 +49,8 @@ RUN adduser --disabled-password --gecos '' doichain && \
 WORKDIR /home/doichain
 USER doichain
 RUN cd /home/doichain \
-&& mkdir -p data \
-&& cd data && \
-	mkdir dapp && cd dapp && \
+&& mkdir -p data/dapp \
+&& cd data/dapp && \
 	mkdir -p .meteor/local && \
 	mkdir -p local 
 
