--- a/dapp/dockerfile
+++ b/dapp/dockerfile
@@ -36,12 +36,12 @@ ENV RPC_PORT_TESTNET 18339
 ENV RPC_PORT_REGTEST 18332
 ENV RPC_USER ""
 
-RUN adduser --disabled-password --gecos '' doichain && \
-	adduser doichain sudo && \
-	echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers && \ 
-  apt update -qq && apt install -qq -y --no-install-recommends \
+RUN apt update -qq && apt install -qq -y --no-install-recommends \
   bash sudo git curl jq ca-certificates \ 
   && (curl https://install.meteor.com/  | sh) \
+  && adduser --disabled-password --gecos '' doichain \
+	&& adduser doichain sudo \
+	&& echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers \ 
   && cd /home/doichain  \ 
   && git clone --branch ${DOICHAIN_DAPP_VER} https://github.com/Doichain/dapp.git && chown -R doichain dapp && cd dapp
 
