--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,16 +80,16 @@ services:
 #     - DAPP_SMTP_DEFAULT_FROM=validator@doichain.org
 
   dapp:
-    image: doichain/dapp
+    image: doichain/dapp:v0.0.9.115
     container_name: dapp
     hostname: dapp
- #   build: ./dapp
+    build: ./dapp
     ports:
     - "3000:3000"
     volumes:
     - dapp-volume:/home/doichain/data
     environment:
-    - DOICHAIN_DAPP_VER=v0.0.9.114
+    - DOICHAIN_DAPP_VER=v0.0.9.115
     - MONGO_URL="mongodb://mongo:27017"
     - DAPP_HOST=localhost    
     - DAPP_PORT=3000
@@ -97,8 +97,8 @@ services:
     - RPC_PORT=18339   
     - RPC_USER=admin
     - RPC_PASSWORD=password
-    - DAPP_SMTP_USER=doichain
     - DAPP_SMTP_HOST=smtp
+    - DAPP_SMTP_USER=doichain
     - DAPP_SMTP_PASS=doichain
     - DAPP_SMTP_PORT=587
     - DAPP_SMTP_DEFAULT_FROM=validator@doichain.org
