--- a/docker-compose-email-doi-testnet.yml
+++ b/docker-compose-email-doi-testnet.yml
@@ -72,6 +72,7 @@ services:
   
   regtest-mongo:
     image: "mongo:3.2"
+    container_name: mongo
     hostname: mongo
     expose:
       - "27017"
