--- a/docker-compose-email-doi-testnet.yml
+++ b/docker-compose-email-doi-testnet.yml
@@ -7,6 +7,7 @@ services:
       - dapp
     environment:
       - SERVER_NAME=${SERVER_NAME}
+      - DAPP_PORT=${DAPP_PORT}
     ports:
       - "443:443"
     volumes:
@@ -36,6 +37,7 @@ services:
     environment:
       - TESTNET=true
       - CONNECTION_NODE=157.90.175.84
+      - DAPP_PORT=${DAPP_PORT}
       - RPC_USER=${RPC_USER}
       - RPC_PASSWORD=${RPC_PASSWORD}
       - RPC_ALLOW_IP=0.0.0.0/0 #::/0
@@ -61,7 +63,7 @@ services:
       - DOICHAIN_DAPP_VER=v0.0.9.115
       - MONGO_URL="mongodb://mongo:27017"
       - DAPP_HOST=${SERVER_NAME}
-      - DAPP_PORT=4000
+      - DAPP_PORT=${DAPP_PORT}
       - RPC_HOST=doichain-testnet
       - RPC_PORT=18339   
       - RPC_USER=${RPC_USER}
