--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -2,28 +2,25 @@ server {
     listen 80;
     server_name ${SERVER_NAME};
     location / {
-    	proxy_pass http://${SERVER_NAME}:3000;
-    	proxy_set_header Host $host;
-    	proxy_cache_bypass $http_upgrade;
+        return 301 https://$host$request_uri;
     }
+
     location /.well-known/acme-challenge/ {
     	root /var/www/certbot;
     }
 }
+server {
+    listen 443 ssl;
+    server_name ${SERVER_NAME};
 
-#
-#server {
-#    listen 443 ssl;
-#    server_name ${SERVER_NAME};
-#
-#    ssl_certificate /etc/letsencrypt/live/${SERVER_NAME}/fullchain.pem;
-#    ssl_certificate_key /etc/letsencrypt/live/${SERVER_NAME}/privkey.pem;
-#    include /etc/letsencrypt/conf/options-ssl-nginx.conf;
-#    ssl_dhparam /etc/letsencrypt/conf/ssl-dhparams.pem;
-#    
-#    location / {
-#    	proxy_pass http://${SERVER_NAME}:3000;
-#    	proxy_set_header Host $host;
-#    	proxy_cache_bypass $http_upgrade;
-#    }
-#}
+    ssl_certificate /etc/letsencrypt/live/${SERVER_NAME}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/${SERVER_NAME}/privkey.pem;
+    include /etc/letsencrypt/conf/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/conf/ssl-dhparams.pem;
+    
+    location / {
+    	proxy_pass http://${SERVER_NAME}:${DAPP_PORT};
+    	proxy_set_header Host $host;
+    	proxy_cache_bypass $http_upgrade;
+    }
+}
