--- a/docker-compose-email-doi-mainnet.yml
+++ b/docker-compose-email-doi-mainnet.yml
@@ -44,7 +44,7 @@ services:
        ipv4_address: 172.20.0.6
 
   dapp: 
-    image: doichain/dapp
+    image: doichain/dapp:v0.0.9.116
     depends_on:
       - doichain
       - mongo
@@ -55,8 +55,9 @@ services:
       - "3000:3000"
     volumes:
       - dapp-volume:/home/doichain/data
+      - doichain-volume:/home/doichain/.doichain
     environment:
-      - DOICHAIN_DAPP_VER=v0.0.9.114
+      - DOICHAIN_DAPP_VER=v0.0.9.116
       - MONGO_URL="mongodb://mongo:27017"
       - DAPP_HOST=${SERVER_NAME}   
       - DAPP_PORT=3000
