--- a/docker-compose-email-doi-testnet.yml
+++ b/docker-compose-email-doi-testnet.yml
@@ -39,7 +39,7 @@ services:
     environment:
       - TESTNET=true
       - CONNECTION_NODE=157.90.175.84
-      - DAPP_PORT=${DAPP_PORT}
+      - DAPP_URL=http://dapp:3000
       - RPC_USER=${RPC_USER}
       - RPC_PASSWORD=${RPC_PASSWORD}
       - RPC_ALLOW_IP=0.0.0.0/0 #::/0
